Fixed admin edit post button z-indexing

--- a/_sass/_single.scss
+++ b/_sass/_single.scss
@@ -64,6 +64,7 @@ main.single{
 		height:1em;
 		width:1em;
 		text-align: center;
+		z-index: 2;
 	}
 }
 #toggle-header{
